Fixing footer text spacing and borders on mobile devices.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4072,7 +4072,7 @@ input, select, textarea {
 		#footer .select-wrapper:before {
 			color: #e2e2e2;
 		}
-
+		
 		#footer input[type="checkbox"] + label,
 		#footer input[type="radio"] + label {
 			color: #717981;
@@ -4199,8 +4199,13 @@ input, select, textarea {
 			-webkit-flex-shrink: 1;
 			-ms-flex-shrink: 1;
 			flex-shrink: 1;
-			padding: 4rem 4rem 2rem 4rem ;
-			border-left: solid 2px #e2e2e2;
+			padding: 4rem 4rem 1rem 4rem ;
+			/* border-top: solid 1px #e2e2e2;
+			border-right: solid 1px #e2e2e2; */
+			border-top: 1px  #e2e2e2;
+			white-space: nowrap;
+			word-spacing: 5px;
+			padding-bottom: 10%;
 		}
 
 			#footer > section:first-child {
@@ -4221,7 +4226,7 @@ input, select, textarea {
 
 				#footer > section.split > section {
 					padding: 3rem 4rem 1rem 4rem ;
-					border-top: solid 2px #e2e2e2;
+					border-top: solid 1px #e2e2e2;
 				}
 
 					#footer > section.split > section:first-child {
